Cherrypick changes from Pzl: Add support for lazily-loaded tab panel pages in an easy way, using a parameter while adding tabs. Bugfix in auto-reload reporting a load error on the empty response in Firefox. Bad bug fixed: page build used external children, causing build problems with delegating nodes. The effect was the TopBar not showing a global message on the Admin page of the Puzzler without any kind of error.

--- a/to.etc.domui/src/resources/themes/blue/style.theme.css
+++ b/to.etc.domui/src/resources/themes/blue/style.theme.css
@@ -63,6 +63,12 @@ button {
 .page-content {
 	margin: 0px 10px;
 }
+
+.ui-clickable {
+	cursor: pointer;
+}
+
+
 /*** 005_oddchars.frag.css ***/
 /*** Select special chars ***/
 .ui-oddchars {
@@ -1983,6 +1989,7 @@ li.ui-tab-err {
 /*** MessageLine ***/
 .ui-msgln {
 	padding: 4px 0px;
+/*	display: inline-block;		jal 20130215 This shows messages behind one another.... That should not happen.. */
 }
 .ui-msgln img {
 	float: left;
